kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopnow
  labels:
    app.kubernetes.io/name: shopnow
    app.kubernetes.io/part-of: shopnow-ecommerce
