kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopnow-frontend-service
  namespace: shopnow
  labels:
    app.kubernetes.io/name: shopnow
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: shopnow-frontend
